# pyferro

./: .gitignore  README.md  benchmark.sh
compiler/: Cargo.toml
compiler/src/: backend.rs  codegen.rs  lib.rs  main.rs  parser.rs  semantic.rs
compiler/tests/: e2e_tests.rs  ir_snapshot_tests.rs
compiler/tests/fixtures/: abs_value.py  bad_empty_body.py  bad_no_return.py  bad_wrong_type.py  bool_and.py  bool_is_negative.py  bool_is_positive.py  bool_not.py  bool_param.py  countdown.py  factorial.py  fibonacci.py  float_basic.py  for_step.py  for_sum.py  max_of_two.py  multi_print.py  sum_to_n.py  test_for.py  void_print.py
compiler/tests/snapshots/: ir_snapshot_tests__ir_snapshot_abs_value.snap  ir_snapshot_tests__ir_snapshot_bool_and.snap  ir_snapshot_tests__ir_snapshot_bool_is_positive.snap  ir_snapshot_tests__ir_snapshot_bool_not.snap  ir_snapshot_tests__ir_snapshot_bool_param.snap  ir_snapshot_tests__ir_snapshot_factorial.snap  ir_snapshot_tests__ir_snapshot_fibonacci.snap  ir_snapshot_tests__ir_snapshot_float_basic.snap  ir_snapshot_tests__ir_snapshot_for_range.snap  ir_snapshot_tests__ir_snapshot_max_of_two.snap  ir_snapshot_tests__ir_snapshot_sum_to_n.snap  ir_snapshot_tests__ir_snapshot_void_print.snap
test_env/: pyproject.toml  test.py
