[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "pyferro"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
inkwell = { version = "0.9.0", features = ["llvm22-1"] }
rustpython-parser = "0.4.0"

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.42", features = ["filters"] }
